--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FGerador QR COD E</title>
+    <title>Gerador QR COD E</title>
     <!--Script-->
     <script src="assets/js/script.js"></script>
 
@@ -16,6 +16,18 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header id="qr-header">
+            <h1>Gerador de QR Code</h1>
+            <p>Insira uma URL ou texto, para criar um QR Coode</p>
+        </header>
+        <div id="qr-header">
+            <input type="text" placeholder="Digite a URL ou texto">
+            <button>Gerar QR Code</button>
+        </div>
+        <div id="qr-code">
+            <img src="assets/img/qrcode.png" alt="QR Code">
+        </div>
+    </div>
 </body>
 </html>
