--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h1>Gerador de QR Code</h1>
             <p>Insira uma URL ou texto, para criar um QR Coode</p>
         </header>
-        <div id="qr-header">
-            <input type="text" placeholder="Digite a URL ou texto">
+        <div id="qr-form">
+            <input type="text" placeholder="Digite a URL ou texto"><!--Posso por inputs soltos quando nao teria recebimento de dados quando tiver usar Form para englobar-->
             <button>Gerar QR Code</button>
         </div>
         <div id="qr-code">
