--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador QR COD E</title>
     <!--Script-->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" defer></script>
 
     <!--Fonte Roboto-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
